* Fixed some links on documentation. + Now grabber gets properties and shows object names.

--- a/4.3/TODO.txt
+++ b/4.3/TODO.txt
@@ -1,3 +1,7 @@
+  Finish Grabber.
+
+  Finish Setup.
+
   New unit distibution:
 
   * albase
@@ -23,3 +27,6 @@
 
   * algl
     OpenGL support.
+
+  * algui
+    GEM style GUI.
