--- a/4.4/TODO.txt
+++ b/4.4/TODO.txt
@@ -1,18 +1,6 @@
-* Unit algl:
-
-  I've find that most people dislikes Allegro.pas just because it hasn't 3D
-  stuff, so unit algl (it means "Allegro OpenGL") is my current priority.
-  Current algl unit doesn't work properly and may be there's a conflict loading
-  the libraries (FPC loads OpenGL library in run-time) so I'll rewrite it using
-  AllegroGL as reference.
-
-  I'll implement the most basic functions and procedures just to initialize the
-  OpenGL context, including double buffer and z-buffer, and allowing to use
-  some of the Allegro's drawing primitives (line, rectfill and few more) to
-  draw in plane f(x, y, 0).  Then I'll add more functionality if nobody else
-  does it (upload an AL_BITMAP object as texture, set an orthogonal-per-pixel
-  mode to draw primitives on the screen AKA "Allegro drawing mode", use
-  al_textout_ex to draw text, etc.).
+* al_d_list_proc documentation
+  ("array of byte" to "first element of an ARRAY OF BYTE")
+* Move AL_DAT_END to a variable as other AL_DAT_* ones.
 
 * Tools
 
