+ Added functions al_arc, al_do_line, al_do_circle, al_do_ellipse, al_do_arc and al_spline. + Added example exspline. + Added "CONST" modifier in some parameters. + Some documentation update.

--- a/4.4/TODO
+++ b/4.4/TODO
@@ -1,5 +1,7 @@
 + Complete explanation of Joystick. i.e. problems with configuration file.
 
+* Change some parameters from "POINTER" to "VAR ARRAY OF..." (i.e: polygons).  I've checked it passes data correctly to C.
+
 * MIDI:
   + load_ibk
 
