* _al_putpixel* and _al_getpixel* fixed (Bug: #3313335)
+ In-line compiler configuration moved to an "allegro.cfg" file.  This way all units has exact same configuration.

* Example "exrotscl" fixed and (few) optimised.

+ Now example "extrans" admits color depth by command line, and uses desktop color depth if available.

--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,10 +1,9 @@
-* Check _al_putpixel32 implementation.
-
-* Test al_arc routine.
-
-* Use "FINALIZATION" to call "al_exit".
+* Check polygon checking in 3D examples.  Fix all them, modifying "normal-z"
+  calculation.
 
 * Revise list of examples.
+
++ Add triple-buffer example, if available.
 
 * Check Windows alleg44.dll build parameters.  Be sure it's optimised.
 
@@ -21,5 +20,3 @@
 
   Actually supported but there's some problems with it.  Should find a way to
   integrate it with FPC/Lazarus UNICODE support (i.e. utf8string, etc.)
-
-* New installation system via fpmake and/or fpcmake.
