--- a/TRUNK/examples/README
+++ b/TRUNK/examples/README
@@ -1,6 +1,7 @@
 ex3d.pp     - 3D demo.
 exblend.pp  - How to use the translucency functions in truecolor video modes.
 excolmap.pp - Creating graphical effects with color mapping tables.
+exconfig.pp - Using the configuration routines.
 exdata.pp   - Appening datafiles onto your executable.
 exdbuf.pp   - How to use double buffering to avoid flicker.
 exfixed.pp  - Using fixed point maths.
@@ -8,8 +9,8 @@ exflip.pp   - How to use page flipping.
 exgui.pp    - Using menu and dialog objects.
 exhello.pp  - Simple graphical "hello world" program.
 exhsvrgb.pp - Translating HSV space -> RGB values.
-exkeys.pp   - Demonstrates how to access the keyboard.
 exjoy.pp    - How to calibrate and use joysticks and pads.
+exkeys.pp   - Demonstrates how to access the keyboard.
 exmouse.pp  - Getting input from the mouse.
 expal.pp    - Palette effects and color cycling.
 expat.pp    - Using patterned drawing modes and sub-bitmaps.
