Last changes before release.

--- a/TRUNK/AUTHORS
+++ b/TRUNK/AUTHORS
@@ -8,3 +8,6 @@ Colaborators
 
   Martin Kalbfuﬂ
   - Helped testing and fixing the last versions.
+
+  sberinde & carlejt (Allegro.pas' forum nicks)
+  - Helped a lot finding bugs and testing patches for version 4.4.3.
