--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -1,5 +1,8 @@
 In no special order
 
+  * There are some "enum" types (sets). Be sure that they have the correct
+    sice in bits.  Read FPC and Delphi help.
+
   * Header "timer.h" is short enough to translate in a single step.
 
   * Lots of documentation aren't written.
