[A5]  * Add-ons al5codec and al5audio completed (at the moment).  * Few small changes.

--- a/BRANCHES/5.0/docs/internal/README
+++ b/BRANCHES/5.0/docs/internal/README
@@ -45,3 +45,11 @@ Unimplemented headers
   ------
 
   As I see, Free Pascal RTL has same functionality.
+
+
+
+  threads.h
+  ---------
+
+  Free Pascal has TThread class.  May be it's enough.
+
