[A5]  * Changed the PCHAR parameters to STRING (ANSISTRING).  It seems to work.  * Some fixes at addon "al5primitives", adding few symbols, modifying    datatype of parameters and fields.  * Normalized parameters of event getters (now all they use VAR instead of    POINTER).  + Added "transformations".  + Added example "ex_prims".  Uncomplete at the moment.

--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -5,3 +5,6 @@ In no special order
 
   * Documentation isn't written.
     May be I should find another documentation tool as pasdoc is "dirty".
+
+  * Test if it's possible to use STRING (ANSISTRING) as return values
+    instead of PCHAR.
