--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -5,6 +5,10 @@ In no special order
 
   * Documentation isn't written.
     May be I should find another documentation tool as pasdoc is "dirty".
+    If not, use pasdoc.
 
   * Test if it's possible to use STRING (ANSISTRING) as return values
     instead of PCHAR.
+
+  * Procedures that receibes STRING (ANSISTRING) as parameter seems to be
+    broken (at least the "font" addon raises a rare error).  Check them.
