--- a/BRANCHES/5.0/docs/internal/README
+++ b/BRANCHES/5.0/docs/internal/README
@@ -10,6 +10,8 @@ Data types
   If a function returns a text, it's defined as PCHAR.  May be it should bee
   ANSISTRING too.
 
+  Free Pascal optimizes "enumeration" type sizes.  They MUST be 4 bytes long.
+
 
 
 parameters
@@ -59,12 +61,13 @@ Unimplemented headers
   path.h
   ------
 
-  As I see, Free Pascal RTL has same functionality.
+  As I see, Free Pascal RTL has same functionality.  May be it should be added
+  for Delphi.
 
 
 
   threads.h
   ---------
 
-  Free Pascal has TThread class.  May be it's enough.
+  IIRC both Free Pascal and Delphi have TThread class.
 
