Some useful internal documentation.

--- a/BRANCHES/5.0/docs/internal/README
+++ b/BRANCHES/5.0/docs/internal/README
@@ -1,85 +1,4 @@
 
-Data types
-==========
+  Read the "style.txt" file to know the coding style to use.
 
-  Data types on Pascal behaves different than C.  Actually FPC activates some
-  microprocessor exception mode to prevent/clamp/convert/whatever some data,
-  or it does with Intel x86 family.  As result of an Allegro.cc thread[1] this
-  affects the work of Allegro.
-
-
-THE REST OF THE FILE IS A MESS AND SHOULD BE FIXED!
-
-  Texts are managed in two different types:
-
-  When used as parameter, they're defined as STRING assuming they're ANSISTRING.
-  An exception are CALLBACKs.
-
-  If a function returns a text, it's defined as PCHAR.  May be it should bee
-  ANSISTRING too.
-
-  Free Pascal optimizes "enumeration" type sizes.  They MUST be 4 bytes long.
-
-
-
-parameters
-==========
-
-  Some parameters that are pointers in C are implemented in Pascal as VAR
-  parameters.  Some other are still pointers.
-
-  Text parameters are defined as STRING assuming they're ANSISTRING.
-  An exception are CALLBACKs.
-
-
-
-Unimplemented headers
-=====================
-
-  config.h
-  --------
-
-  Object Pascal defines the class TStrings that implements similar
-  functionality.
-
-
-
-  file.h fshook.h
-  ---------------
-
-  Not at the moment.  May be if somebody ask for it or I find a real use.
-
-
-
-  fixed.h fmaths.h
-  ----------------
-
-  Not at the moment.
-
-
-
-  memory.h
-  --------
-
-  It uses C preprocesor and I don't know if it's possible to reproduce its
-  functionality using Pascal.
-
-
-
-  path.h
-  ------
-
-  As I see, Free Pascal RTL has same functionality.  May be it should be added
-  for Delphi.
-
-
-
-  threads.h
-  ---------
-
-  IIRC both Free Pascal and Delphi have TThread class.
-
-
-NOTES
-=====
-[1] http://www.allegro.cc/forums/thread/602423
+  Read the "c2pas.txt" file to know how to "translate" from C to Pascal.
