[A5]   * I've added a "DEBUGMODE" symbol checking that allows to use the debug     version of libraries.  Note that debug version of Allegro is less prone to     fail!

--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -1,5 +1,8 @@
 In no special order
 
+  * Add to documentation a note about to define symbol "DEBUGMODE" if using
+    "-g".
+
   * There are some "enum" types (sets). Be sure that they have the correct
     sice in bits.  Read FPC and Delphi help.
 
