[A5]  + Added unit "al5data" that implements a few functions to help managing data.  * All funcions and procedures that uses STRING as parameter has been modified    to be wrappers to ones that uses PCHAR instead.  I can't see a difference    except a new bug when calling "al_load_sample".

--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -3,18 +3,14 @@ In no special order
   * Add to documentation a note about to define symbol "DEBUGMODE" if using
     "-g".
 
+  * Units "al5color", "al5gl" have STRING parameters.  Add wrappers to PCHAR.
+
   * There are some "enum" types (sets). Be sure that they have the correct
     sice in bits.  Read FPC and Delphi help.
 
   * Documentation isn't written.
     May be I should find another documentation tool as pasdoc is "dirty".
-    If not, use pasdoc.
-
-  * Test if it's possible to use STRING (ANSISTRING) as return values
-    instead of PCHAR.
-
-  * Procedures that receibes STRING (ANSISTRING) as parameter seems to be
-    broken (at least the "font" addon raises a rare error).  Check them.
+    Else use pasdoc.
 
   * Document COLOR issue (can't use functions "_map_" as parameters in
     Windows (?)).
