[4.4] * Small change in exhsvrgb. * Remastering... * More changes to make it compatible with 64bit systems.

--- a/TRUNK/CHANGES
+++ b/TRUNK/CHANGES
@@ -1,3 +1,6 @@
+
+ Now object files are stored in a separated directory.
+
 Changes between versions 4.4.2 y 4.4.3
 ======================================
 
